# backend

./: Dockerfile  package.json
operators/: CMakeLists.txt  main.cpp
operators/include/gradient/: ocv_prewitt.h
operators/src/gradient/: alt_sobel.cpp  ocv_prewitt.cpp
src/: app.js
src/controllers/: operators.js
src/routes/: operators.js
